Added troubleshooting point (#1495)